--- a/templates/job_skills.html
+++ b/templates/job_skills.html
@@ -2,6 +2,12 @@
 
 {% block content %}
 
+<form action ="/job_skills" method="POST">
+    <label>Enter a job title</label>
+    <input type="text" name="title">
+    <input type="submit">
+</form>
+<h3>Skills for {{ job_title }}</h3>
 <ul>
 
     {% for skill in skills %}
