refactored code that displays skills per job now that the data is all stored on a table

--- a/templates/job_skills.html
+++ b/templates/job_skills.html
@@ -12,7 +12,7 @@
 
     {% for skill in skills %}
     <li>
-        {{ skill }}
+        {{ skill[0] }} {{skill[1]}}
     </li>
     {% endfor %}
 
