created links to home and to logout on every page(added them to the base)

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,8 @@
 </head>
 
 <body>
+    <a href='/'>home</a>
+    <a href='/logout'>logout</a>
     {% block content %}
 
     this is where stuff goes
