changed name from vagrant to kami, added name option in registration

--- a/templates/register.html
+++ b/templates/register.html
@@ -1,6 +1,8 @@
 {% extends base.html %}
 {% content block %}
 <form action='/register' method="POST">
+    <label>name</label>
+<input type='text' name='name'><br>
     <label>Create an email</label>
 <input type='text' name='email'><br>
     <label>Create a password</label>
