made the logout link only show if users are logged in, otherwise login and registration links show up instead

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,12 @@
 
 <body>
     <a href='/'>home</a>
+    {% if session[user] %}
     <a href='/logout'>logout</a>
+    {% else %}
+    <a href='/login'>login</a>
+    <a href='/register'>register</a>
+    {% endif %}
     {% block content %}
 
     this is where stuff goes
