User skill relationship table and class created

--- a/templates/hompage.html
+++ b/templates/hompage.html
@@ -1,10 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <h1>title</h1>
-<form action="POST">
-    <h2>login</h2>
-    <input type="text" name="username"><br>
-    <input type="text" name="password"><br>
-    <input type="submit">
-</form>
+<p> Welcome to a project by Kami Karras that is still in the works</p>
+<p> I don't even know how you got here</p>
+<p>Probably some details will go here</p>
 {% endblock %}
