--- a/templates/login_form.html
+++ b/templates/login_form.html
@@ -1,5 +1,5 @@
-{% extends base.html %}
-{% content block %}
+{% extends 'base.html' %}
+{% block content %}
 <form action='/login' method="POST">
     <label>Enter your email</label>
     <input type='text' name='email'><br>
