--- a/templates/register.html
+++ b/templates/register.html
@@ -1,5 +1,5 @@
-{% extends base.html %}
-{% content block %}
+{% extends 'base.html' %}
+{% block content %}
 <form action='/register' method="POST">
     <label>name</label>
 <input type='text' name='name'><br>
