created first version of nav bar

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,8 @@
 {% endfor %}
 <br>
     <a href='/'>home</a>
+    <a href='/skill_search'>search by skill</a>
+    <a href='/job_skills'>search by job</a>
     {% if session["user_id"] %}
     <a href='/logout'>logout</a>
     {% else %}
