--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,7 +6,7 @@
     <h3>These are your skills</h3>
     {% for skill in user_skills %}
     <li>
-        {{skill}}
+        {{skill.skill.skill}}
     </li>
     {% endfor %}
 </ol>
@@ -18,6 +18,12 @@
     <input type='text' name='skill'>
     <input type='submit'>
     </form>
+
+<form action="/profile/{{ user_id }}" method="POST">
+    <h4>delete a skill</h4>
+    <input type='text' name='delete_this'>
+    <input type='submit'>
+</form>
 <!-- <h3> -->
 <!-- <ul>
     <h3>These are the skills you are working on</h3>
