--- a/templates/profile.html
+++ b/templates/profile.html
@@ -13,16 +13,16 @@
 {% else %}
 <h3>Looks like you don't have any skills!<h3>
 {% endif %}
-<form action="/profile/{{ user_id }}" method="POST">
+<form name="add" action="/profile/{{ user_id }}" method="POST">
     <h4>add a skill</h4>
-    <input type='text' name='skill'>
-    <input type='submit'>
+    <input type='text' name='skill' value=None>
+    <input name='add' type='submit'>
     </form>
 
-<form action="/profile/{{ user_id }}" method="POST">
+<form name="del" action="/profile/{{ user_id }}/del" method="POST">
     <h4>delete a skill</h4>
     <input type='text' name='delete_this'>
-    <input type='submit'>
+    <input name= 'del' type='submit'>
 </form>
 <!-- <h3> -->
 <!-- <ul>
