created a few tests to see if we could reach the homepage, registration page, and login page

--- a/templates/login_form.html
+++ b/templates/login_form.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<form action='/login' method="POST">
+<form action='/login' method='POST'>
     <label>Enter your email</label>
     <input type='text' name='email'><br>
     <label>Enter your password</label>
