--- a/templates/register.html
+++ b/templates/register.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
-<form action='/register' method="POST">
+<form action='/register' method='POST'>
     <label>name</label>
 <input type='text' name='name'><br>
-    <label>Create an email</label>
+    <label>add an email</label>
 <input type='text' name='email'><br>
     <label>Create a password</label>
 <input type='text' name='password'><br>
