added project name to the homepage and previously added it to the title in base.html

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>title</h1>
+<h1>Skillin it</h1>
 <p> Welcome to a project by Kami Karras that is still in the works</p>
 <p> I don't even know how you got here</p>
 <p>Probably some details will go here</p>
