--- a/templates/skill_search.html
+++ b/templates/skill_search.html
@@ -3,19 +3,22 @@
 <form method="POST">
     <label>Enter a skill to see jobs related to that skill</label><br>
     <input type="text" name="skill_search"><br>
-    <input type="submit">
-</form>
-{% if jobs %}
-<!-- <form>
-    <label>Add another skill!</label>
+    <label>optional second skill</label><br>
     <input type="text" name="another_skill"><br>
     <input type="submit">
-</form> -->
+</form>
+<h3>both: </h3>
+<ul>
+{% for b in both %}
+<li>{{b}}</li>
+{% endfor %}
+</ul>
+{% if jobs %}
 <ul>
     <h3>Jobs that use {{skill_search}}</h3>
 {% for job in jobs %}
 <li>
-    {{ job }}
+    {{ job.job.title}}
 </li>
 {% endfor %}
 </ul>
