--- a/templates/base.html
+++ b/templates/base.html
@@ -2,22 +2,59 @@
 <html>
 <head>
     <title>Skillin it</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
+    <style>
+    #link {
+        color: white;
+    }
+    body{
+        background-color: #579fd7;
+    }
+    </style>
 </head>
 
 <body>
 {% for flash in get_flashed_messages() %}
 {{ flash }}
 {% endfor %}
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #1c3664">
+  <a class="navbar-brand" id="link" href="/">Skillin it</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" id="link" href="/">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" id="link" href="/skill_search">search by skill</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" id="link" href="/job_skills">Search by job</a>
+      </li>
+      {% if session["user_id"] %}
+      <li class="nav-item">
+        <a class="nav-link" id="link" href="/profile/{{ session['user_id'] }}">profile</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" id="link" href="/logout">logout</a>
+      </li>
+      {% else %}
+      <li class="nav-item">
+        <a class="nav-link" id="link" href="/login">login</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" id="link" href="/register">register</a>
+      </li>
+      {% endif %}
+    </ul>
+  </div>
+</nav>
 <br>
-    <a href='/'>home</a>
-    <a href='/skill_search'>search by skill</a>
-    <a href='/job_skills'>search by job</a>
-    {% if session["user_id"] %}
-    <a href='/logout'>logout</a>
-    {% else %}
-    <a href='/login'>login</a>
-    <a href='/register'>register</a>
-    {% endif %}
+
+
+
     {% block content %}
 
     this is where stuff goes
