began work with d3 and js functions

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
     <title>Skillin it</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
     <style>
+
     #link {
         color: white;
     }
@@ -11,6 +12,7 @@
         background-color: #579fd7;
     }
     </style>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
 <body>
