--- a/templates/profile.html
+++ b/templates/profile.html
@@ -34,13 +34,7 @@
 {% endfor %}
 </ul>
 {% endif %}
-<!-- <h3> -->
-<!-- <ul>
-    <h3>These are the skills you are working on</h3>
-    {% for skill in user_goals %}
-    <li>
-        {{skill}}
-    </li>
-    {% endfor %}
-</ul> -->
+<script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="/static/profile.js"></script>
+
 {% endblock %}
