--- a/templates/profile.html
+++ b/templates/profile.html
@@ -17,7 +17,7 @@
 {% endif %}
 <form name="add" action="/profile/{{ user_id }}" method="POST">
     <h4>add a skill</h4>
-    <input type='text' name='skill' value=None>
+    <input type='text' name='skill'>
     <input name='add' type='submit'>
     </form>
 
