profile page now has 3 seperate job lists that show either jobs that ask for current skills, jobs that ask for in progress skills, and jobs that ask for all of the skills

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -38,9 +38,25 @@
     <input name= 'del' type='submit' value='delete'>
 </form>
 {% if all_jobs %}
-<h3>Jobs looking for your skills</h3>
+<h3>Jobs looking for all skills</h3>
 <ul>
 {% for job in all_jobs %}
+<li>{{job}}</li>
+{% endfor %}
+</ul>
+{% endif %}
+{% if current_skill_jobs %}
+<h3>Jobs looking for your current skills</h3>
+<ul>
+{% for job in current_skill_jobs %}
+<li>{{job}}</li>
+{% endfor %}
+</ul>
+{% endif %}
+{% if progress_skills_jobs %}
+<h3>Jobs looking for your progress skills</h3>
+<ul>
+{% for job in progress_skills_jobs %}
 <li>{{job}}</li>
 {% endfor %}
 </ul>
