working on skills list option to add to skill to user skills. Created a button that sends the data to python. I still need to update the database with the info so that it is added to the user skills

--- a/templates/job_skills.html
+++ b/templates/job_skills.html
@@ -19,10 +19,10 @@
     {% endfor %}
 
 </ol>
-<article class="drop-here" ondrop="drop(event)" ondragover="allowDrop(event)" style="width: 100px; height: 100px; border: 1px solid black; display: inline-block">
-    </article>
 <div class="holder" style="width: 70%; margin-left: 15%; text-align: center">
     </div>
+    <button id="addit">add</button>
+    <div id="test" name="test"></div>
 <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="/static/job_skills.js"></script>
 
