--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,18 @@
     <title>Skillin it</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
     <style>
+    #test {
+        background-color: black;
+        width: 200px;
+        height: 200px;
+        position: absolute;
+        right: 200px;
+        top: 200px;
+        color: white;
+    }
+    .test:hover {
+        background-color: white;
+    }
 
     #link {
         color: white;
