--- a/templates/job_skills.html
+++ b/templates/job_skills.html
@@ -19,11 +19,14 @@
     {% endfor %}
 
 </ol>
-<div class="holder" style="width: 70%; margin-left: 15%; text-align: center">
+<div class="holder">
     </div>
     <button id="addit">add</button>
-    <div id="test" name="test"></div>
+    <div id="test" name="test" value="none">
+        <h3 class="skill"></h3>
+    </div>
 <script src="https://d3js.org/d3.v5.min.js"></script>
+
     <script src="/static/job_skills.js"></script>
 
 {% endblock %}
