--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,43 +1,50 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="name" style="background-color: #ffcd05; color: #1c3664; display: inline-block; padding: 10px 30px; border-radius: 50px; margin-bottom: 30px;">
-<h1>{{ name }}</h1>
+<section class="top">
+<aside>
+<div class="name">
+<h1>Hello {{ name }}</h1>
 </div>
-{% if user_skills %}
-<ol>
-    <h3>These are your skills</h3>
-    {% for skill in user_skills %}
-    {% if not skill.in_progress %}
-    <li>
-        {{skill.skill.skill}}
-    </li>
-    {% endif %}
-    {% endfor %}
-    <h3>These are in progress skills</h3>
-    {% for skill in user_skills %}
-    {% if skill.in_progress %}
-    <li>
-        {{skill.skill.skill}}
-    </li>
-    {% endif %}
-    {% endfor %}
-</ol>
-{% else %}
-<h3>Looks like you don't have any skills!<h3>
-{% endif %}
 <form name="add" action="/profile/{{ user_id }}" method="POST">
-    <h4>add a skill</h4>
+    <h4>-----add a skill-----</h4>
     <input type='checkbox' name='in-progress'>this skill is in progress still<br>
     <input type='text' name='skill'>
-    <input name='add' type='submit' value='add'>
+    <input name='add' type='submit' value='+'>
     </form>
 
 <form name="del" action="/profile/{{ user_id }}/del" method="POST">
-    <h4>delete a skill</h4>
+    <h4>----delete a skill----</h4>
     <input type='text' name='delete_this'>
-    <input name= 'del' type='submit' value='delete'>
+    <input name= 'del' type='submit' value='-'>
 </form>
+</aside>
+{% if user_skills %}
+<div class="skills">
+<ul class="current">
+    <h3>These are your current skills</h3>
+    {% for skill in user_skills %}
+    {% if not skill.in_progress %}
+    <li class="skill">
+        {{skill.skill.skill}}
+    </li>
+    {% endif %}
+    {% endfor %}
+    <h3 class="in-progress">These are your in progress skills</h3>
+    {% for skill in user_skills %}
+    {% if skill.in_progress %}
+    <li class="skill">
+        {{skill.skill.skill}}
+    </li>
+    {% endif %}
+    {% endfor %}
+</ul>
+</div>
+{% else %}
+<h3>Looks like you don't have any skills!<h3>
+{% endif %}
+</section>
 {% if all_jobs %}
+<div class="jobs">
 <h3>Jobs looking for all skills</h3>
 <ul>
 {% for job in all_jobs %}
@@ -60,6 +67,7 @@
 <li>{{job}}</li>
 {% endfor %}
 </ul>
+</div>
 {% endif %}
 
 
