--- a/templates/login_form.html
+++ b/templates/login_form.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
-<form action='/login' method='POST'>
+<form id='register' action='/login' method='POST'>
     <label>Enter your email</label>
     <input type='text' name='email'><br>
     <label>Enter your password</label>
-    <input type='text' name='password'><br>
+    <input type='password' name='password'><br>
     <input type='submit'>
     </form>
 {% endblock %}
