continued visual identity, adding mascot mr.ghost to aid the user in various areas

--- a/templates/job_skills.html
+++ b/templates/job_skills.html
@@ -9,14 +9,22 @@
     <input type="number" id="list_total" name="list_total">
     <input type="submit">
 </form>
-
+<div class="job-search-ghost">
+    <p>Enter a job title to see the top skills requested.</p>
+<img src="/static/imgs/ghostin_happy.svg" style="width: 300px"/>
+</div>
 
 <div class="holder">
     </div>
     
     <div id="test" name="test" value="none">
         <h3 class="skill"></h3>
+        </div>
+    <div class="skill-added-ghost">
+        <p>Skill Added</p>
+        <img src="/static/imgs/ghostin_blush.svg"/>
     </div>
+    
     <button id="addit">add</button>
     
 <script src="https://d3js.org/d3.v5.min.js"></script>
