--- a/templates/register.html
+++ b/templates/register.html
@@ -3,9 +3,9 @@
 <form id='register' action='/register' method='POST'>
     <label>name</label>
 <input type='text' name='name'><br>
-    <label>add an email</label>
+    <label>email</label>
 <input type='text' name='email'><br>
-    <label>Create a password</label>
+    <label>password</label>
 <input type='password' name='password'><br>
 <input type='submit'>
 </form>
