--- a/static/css/style.css
+++ b/static/css/style.css
@@ -198,15 +198,54 @@ input[type=number]{
     margin-left: 20px;
 }
 
+.job-search-ghost{
+    margin-left: 30%;
+    margin-top: 50px;
+}
+
+.job-search-ghost p {
+    font-size: 30px;
+    display: inline-block;
+    width: 45%;
+    font-style: bold;
+}
+
+.job-search-hidden{
+    display: None;
+}
+
+.skill-added-ghost{
+    position: absolute;
+    top: 200px;
+    right: 200px;
+    width: 200px;
+    height: 200px;
+    display: None;
+}
+
+.show-ghost{
+    display: block;
+    animation: fade 2s forwards;
+}
 /*registration styles*/
 
 #register{
-    width: 50%;
+    width: 80%;
     text-align: right;
+    font-size: 40px;
 }
 
 #register input[type=submit]{
     width: 100px;
+    font-size: 20px;
+}
+
+#register input[type=text], #register input[type=password]{
+    height: 100px;
+    color: #1A4B7F;
+    width: 70%;
+    border-radius: 60px;
+    margin-top: 20px;
 }
 
 /*skill search styles*/
@@ -226,4 +265,26 @@ input[type=number]{
 }
 .skill-search input{
     display: inline-block;
+}
+
+/*logged out styles*/
+
+.logged-out-ghost p{
+    font-size: 30px;
+    display: inline-block;
+}
+
+.logged-out-ghost{
+    width: 50%;
+    margin-left: 30%;
+}
+
+
+@keyframes fade{
+    0%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
+    }
 }
