--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -6,43 +6,7 @@
 </div>
 
 <!-- Generator: Adobe Illustrator 21.1.0, SVG Export Plug-In  -->
-<svg class="ghostin" version="1.1"
-     xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
-     x="0px" y="0px" width="349.4px" height="447.4px" viewBox="0 0 349.4 447.4" >
-<style type="text/css">
-    .st0{fill:#FFFFFF;}
-    .st1{fill:#1A4B7F;}
-    .st2{fill:none;stroke:#1A4B7F;stroke-width:10;stroke-linecap:round;stroke-miterlimit:10;}
-    .st3{fill:#1A4B7F;stroke:#FFFFFF;stroke-width:8;stroke-miterlimit:10;}
-</style>
-<defs>
-</defs>
-<g>
-    <path class="st0" d="M232.9,443.4c-5.7,0-11-2-14.9-5.7l-22.9-21.2c-5.4-5-12.7-7.8-20.4-7.8s-14.9,2.8-20.4,7.8l-22.9,21.2
-        c-4,3.7-9.3,5.7-14.9,5.7c-5.7,0-11-2-14.9-5.7l-22.9-21.2c-5.4-5-12.7-7.8-20.4-7.8c-7.7,0-14.9,2.8-20.4,7.8
-        c-3.7,3.4-8.9,5.3-14.7,5.3c-5,0-10-1.5-13.6-4C7,416,4.1,413,4,408.4l38.6-260.3c1-6.7,1.8-14.1,2.4-23.1
-        c2.2-32.8,16.7-63.3,40.8-85.9C109.9,16.5,141.5,4,174.7,4s64.8,12.5,88.9,35.2c24.1,22.6,38.5,53.1,40.8,85.9
-        c0.6,9,1.4,16.3,2.4,23.1l38.6,260.3c-0.2,8.2-10,13.3-19.1,13.3c-5.8,0-11-1.9-14.7-5.3c-5.4-5-12.7-7.8-20.4-7.8
-        c-7.7,0-14.9,2.8-20.4,7.8l-22.9,21.2C243.9,441.4,238.6,443.4,232.9,443.4z"/>
-    <path class="st1" d="M174.7,8c32.2,0,62.8,12.1,86.2,34.1c23.3,21.9,37.4,51.5,39.5,83.3c0.6,9.1,1.4,16.5,2.4,23.4l38.6,259.9
-        c-0.4,5.5-8,9.1-15.1,9.1c-4.8,0-9-1.5-12-4.3c-6.2-5.7-14.4-8.9-23.1-8.9c-8.7,0-16.9,3.2-23.1,8.9l-22.9,21.3
-        c-3.2,3-7.6,4.6-12.2,4.6c-4.7,0-9-1.6-12.2-4.6l-22.9-21.3c-6.2-5.7-14.4-8.9-23.1-8.9c-8.7,0-16.9,3.2-23.1,8.9l-22.9,21.3
-        c-3.2,3-7.6,4.6-12.2,4.6c-4.7,0-9-1.6-12.2-4.6l-22.9-21.3c-6.2-5.7-14.4-8.9-23.1-8.9c-8.7,0-16.9,3.2-23.1,8.9
-        c-3,2.8-7.2,4.3-12,4.3c-7.1,0-14.7-3.7-15.1-9.1l38.6-259.9c1-6.9,1.8-14.3,2.4-23.4C51.1,93.6,65.2,64,88.5,42.1
-        C111.9,20.1,142.6,8,174.7,8 M174.7,0L174.7,0C103.8,0,45.7,55.1,41,124.8c-0.5,7.6-1.2,15.2-2.3,22.7L0,408.2
-        c0,10.7,11.4,17.6,23.1,17.6c6.3,0,12.7-2,17.4-6.4l0,0c4.9-4.5,11.3-6.8,17.7-6.8c6.4,0,12.8,2.3,17.7,6.8l22.9,21.3
-        c4.9,4.5,11.3,6.8,17.7,6.8s12.8-2.3,17.7-6.8l22.9-21.3c4.9-4.5,11.3-6.8,17.7-6.8s12.8,2.3,17.7,6.8l22.9,21.3
-        c4.9,4.5,11.3,6.8,17.7,6.8c6.4,0,12.8-2.3,17.7-6.8l22.9-21.3c4.9-4.5,11.3-6.8,17.7-6.8s12.8,2.3,17.7,6.8l0,0
-        c4.8,4.4,11.2,6.4,17.4,6.4c11.7,0,23.1-6.9,23.1-17.6l-38.7-260.6c-1.1-7.5-1.8-15.1-2.3-22.7C303.7,55.1,245.6,0,174.7,0L174.7,0
-        z"/>
-</g>
-<path class="st2" d="M188.7,123c0-11.6,9.4-21,21-21h0c11.6,0,21,9.4,21,21"/>
-<path class="st2" d="M93.7,123c0-11.6,9.4-21,21-21h0c11.6,0,21,9.4,21,21"/>
-<path class="st2" d="M181.7,173c0,11.6-9.4,21-21,21h0c-11.6,0-21-9.4-21-21"/>
-<path class="st1" d="M160.1,346.2l-18.2-16c-1.7-1.5-2.4-3.8-1.8-6l15.2-58.8l-5.9-13.6c-0.6-1.3-0.2-2.9,0.8-3.8l5.6-5.1
-    c0.6-0.6,1.4-0.9,2.3-0.9h12.1c0.8,0,1.6,0.3,2.3,0.9l5.6,5.1c1.1,1,1.4,2.5,0.8,3.8l-5.9,13.6l15.2,58.8c0.6,2.2-0.1,4.5-1.8,6
-    l-18.2,16C165.9,348.2,162.4,348.2,160.1,346.2z"/>
-</svg>
+<img class="ghostin" src="/static/imgs/ghostin.svg"/>
 
 
 
